# lazy-nevis

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  GOVERNANCE.md  LICENSE  PRIVACY.md  README.md  README.pt-BR.md  ROADMAP.md  RTK.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  deny.toml  index.html  package.json  tsconfig.json  vite.config.ts
.cargo/: audit.toml
.claude/rules/: project-rules.md
.configdocs/: execution-plan-screenshot-automation.md
.github/: ACTIONS.md  CODEOWNERS  FUNDING.yml  copilot-instructions.md  dependabot.yml  labels.yml  pull_request_template.md  release.yml
docs/: getting-started.md
openspec/: README.md  config.yaml
scripts/: audit-repository.sh  check-agent-docs.mjs  check-hardcoded-strings.mjs  check-i18n.ts  check-version.ts  install.ps1  install.sh  installer-core.mjs  normalize-release-artifacts.mjs  release-notes.mjs
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  overlay.json  secondary.json  tray.json
src-tauri/icons/: 96x96_monochrome.psd  icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  monitor.rs  state.rs
src-tauri/src/commands/: app_mode.rs  audio.rs  checklist.rs  demo.rs  mod.rs  monitor.rs  notifications.rs  permissions.rs  session.rs  settings.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/db/migrations/: 0001_initial.sql  0002_session_runtime.sql  0003_recent_audio_files.sql  0004_checklist.sql
src-tauri/src/demo/: capture.rs  catalog.rs  mod.rs  seed.rs
src-tauri/src/models/: checklist.rs  mod.rs  overlay.rs  session.rs  settings.rs  window_info.rs
src-tauri/src/services/: app_status.rs  audio_player.rs  checklist.rs  idle_monitor.rs  mod.rs  notifications.rs  permissions.rs  rule_engine.rs  session_logger.rs  shortcuts.rs  window_monitor.rs
src-tauri/tests/: release_contract.rs  session_lifecycle.rs
(+180 files in other folders)
